# nhentaio

./: pyproject.toml
docs/source/: conf.py
docs/source/extensions/: builder.py  details.py
examples/: basic_details.py  query_builder.py  search.py
nhentaio/: __init__.py  asset.py  better_enums.py  client.py  enums.py  errors.py  gallery.py  http.py  query.py  taglike.py
nhentaio/_types/: gallery.py  images.py  requests.py  tags.py
